# idasql

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  PLAN-claude-agent.md  README.md  benchmark.md  help_output.txt  ida-plugin.json  output.txt  run_test.bat  test_query.sql
.claude-plugin/: plugin.json
.github/workflows/: build.yml
examples/: CMakeLists.txt  agent_session_strings.md  example_basic.cpp  example_breakpoints.cpp  example_custom_vtable.cpp  example_decompiler.cpp  example_functions.cpp  example_grep_entities.cpp  example_grep_search.cpp  example_instructions.cpp  example_jump_entities.cpp  example_jump_search.cpp  example_plugin_style.cpp  example_strings.cpp
experiments/: extract_allins.py  insn_decode_test.cpp  insn_decode_test.py
prompts/: idasql_agent.md
scripts/: embed_prompt.py
skills/idasql/: SKILL.md
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  idasql.manifest  main.cpp  remote.hpp
src/common/: agent_settings.hpp  ai_agent.cpp  ai_agent.hpp  claude_agent.cpp  claude_agent.hpp  http_server.cpp  http_server.hpp  idasql_agent_prompt.hpp  idasql_cli.hpp  idasql_commands.hpp  idasql_version.hpp  json_utils.hpp  mcp_server.cpp  mcp_server.hpp  plugin_control.hpp  query_script.hpp  session_handler.hpp  sql_script.hpp  sqlite_utils.cpp  sqlite_utils.hpp  welcome_query.cpp  welcome_query.hpp
src/include/: ida_entities.hpp  ida_entities_extended.hpp  ida_entities_live.hpp  ida_metadata.hpp  ida_metapc_itypes.hpp  ida_sql_functions.hpp  ida_vtable_v2.hpp  pch.hpp
src/lib/: CMakeLists.txt
src/lib/include/idasql/: database.hpp  decompiler.hpp  disassembly.hpp  entities.hpp  entities_dbg.hpp  entities_ext.hpp  entities_live.hpp  entities_search.hpp  entities_types.hpp  functions.hpp  fwd.hpp  idapython.hpp  idasql.hpp  metadata.hpp  metapc_itypes.hpp  platform.hpp  platform_undef.hpp  runtime_settings.hpp  search_bytes.hpp  string_utils.hpp  ui_context_provider.hpp  vtable.hpp  vtable_policy.hpp  vtable_v2.hpp
src/lib/src/: database.cpp  decompiler.cpp  decompiler.hpp  disassembly.cpp  disassembly.hpp  entities.cpp  entities.hpp  entities_dbg.cpp  entities_dbg.hpp  entities_ext.cpp  entities_ext.hpp  entities_search.cpp  entities_search.hpp  entities_types.cpp  entities_types.hpp  functions.cpp  functions.hpp  ida90_compat.cpp  ida_compat.hpp  ida_headers.hpp  idapython_exec.cpp  idapython_exec.hpp  metadata.cpp  metadata.hpp  metadata_welcome.cpp  metadata_welcome.hpp  search_bytes.cpp  search_bytes.hpp  session.cpp  symbols_bookmarks.cpp  types_bookmarks.cpp  ui_context_provider.cpp
src/plugin/: CMakeLists.txt  main.cpp  ui_context_function.cpp  ui_context_function.hpp
src/test/: CMakeLists.txt  idalib_driver.cpp  run_tests.py  test_client.py
src/test3/: CMakeLists.txt  main.cpp  run.bat
tests/: CMakeLists.txt  claude_integration_test.cpp  cli_test.cpp  complex_queries_test.cpp  ctree_table_test.cpp  disasm_table_test.cpp  funcs_table_test.cpp  jump_entities_test.cpp  jump_search_test.cpp  main_test.cpp  names_table_test.cpp  segments_table_test.cpp  session_handler_test.cpp  test_config.json  test_fixtures.hpp  test_utils.cpp  test_utils.hpp  testdb_copy.i64  types_table_test.cpp  vtable_framework_test.cpp  xrefs_table_test.cpp
tests/sql/: blocks_per_func.sql  complex_func_analysis.sql  cte_call_chains.sql  cte_function_metrics.sql  cte_leaf_functions.sql  cte_recursive_callers.sql  db_info_all.sql  funcs_by_prefix.sql  funcs_count.sql  funcs_top10_largest.sql  imports_by_module.sql  join_funcs_xrefs_blocks.sql  join_multi_table.sql  names_not_funcs.sql  segments_all.sql  strings_columns.sql  strings_rebuild.sql  strings_search.sql  subquery_nested.sql  xrefs_least_called.sql  xrefs_most_called.sql
